Cleanup based on static analysis