@@ -49,14 +49,11 @@ public class AlarmTaskManager extends BroadcastReceiver {
 
     public Timer mTimer;
 
-    private AlarmManager mAlarmMgr;
-
-    private Stack<AlarmTask> alarms;
+    private final Stack<AlarmTask> alarms;
     private int lastId = 0;
-    private AlarmTask lastAlarm;
 
     // The context to start the service in
-    private Context mContext;
+    private final Context mContext;
 
     public boolean appIsPaused;
 
@@ -89,18 +86,18 @@ public class AlarmTaskManager extends BroadcastReceiver {
     }
 
     public void setCurTimerDuration(int newDuration) {
-        currentTimerDuration.setValue(new Integer(newDuration));
+        currentTimerDuration.setValue(Integer.valueOf(newDuration));
     }
     public void setCurTimerLeft(int newElapsed) {
-        currentTimerLeft.setValue(new Integer(newElapsed));
+        currentTimerLeft.setValue(Integer.valueOf(newElapsed));
     }
     public void setIndex(int newIndex) {
-        mIndex.setValue(new Integer(newIndex));
+        mIndex.setValue(Integer.valueOf(newIndex));
     }
 
     // TODO: These need to be handled outside
     public NotificationManager mNM;
-    private SharedPreferences prefs;
+    private final SharedPreferences prefs;
 
 
 
@@ -108,7 +105,6 @@ public class AlarmTaskManager extends BroadcastReceiver {
         mContext = context;
         alarms = new Stack<AlarmTask>();
 
-        mAlarmMgr = (AlarmManager) context.getSystemService(Context.ALARM_SERVICE);
         mNM = (NotificationManager) context.getSystemService(Context.NOTIFICATION_SERVICE);
         prefs = PreferenceManager.getDefaultSharedPreferences(context);
 
@@ -133,14 +129,14 @@ public class AlarmTaskManager extends BroadcastReceiver {
 
 
     public interface AlarmTaskListener {
-        public void onEnterState(int state);
+        void onEnterState(int state);
 
         // These methods are the different events and
         // need to pass relevant arguments related to the event triggered
-        public void onObjectReady(String title);
+        void onObjectReady(String title);
 
         // or when data has been loaded
-        public void onDataLoaded(String data);
+        void onDataLoaded(String data);
 
         void onUpdateTime(int elapsed, int duration);
     }
@@ -157,12 +153,8 @@ public class AlarmTaskManager extends BroadcastReceiver {
     }
 
     private void onUpdateTime() {
-        int a;
-        int b;
         if (listener != null)
-            a = getCurTimerLeftVal();
-            b = getCurTimerDurationVal();
-            listener.onUpdateTime(getCurTimerLeftVal(), getCurTimerDurationVal());
+            listener.onUpdateTime(currentTimerLeft.getValue(), currentTimerDuration.getValue());
     }
 
 
@@ -180,7 +172,6 @@ public class AlarmTaskManager extends BroadcastReceiver {
         alarm.id = lastId;
 
         alarms.push(alarm);
-        lastAlarm = alarm;
 
         return alarm;
     }
@@ -253,15 +244,7 @@ public class AlarmTaskManager extends BroadcastReceiver {
         return alarms.size();
     }
 
-    public void cancelAlarm() {
-
-    }
-
     public void pauseAlarms() {
-
-    }
-
-    public void unpauseAlarms() {
 
     }
 
@@ -436,7 +419,7 @@ public class AlarmTaskManager extends BroadcastReceiver {
     /**
      * Handler for the message from the timer service
      */
-    private Handler mHandler = new Handler() {
+    private final Handler mHandler = new Handler() {
 
         @Override
         public void handleMessage(Message msg) {
@@ -478,7 +461,6 @@ public class AlarmTaskManager extends BroadcastReceiver {
     }
 
     private void switchToTimer(AlarmTask alarm) {
-        lastAlarm = alarm;
         int duration = alarm.duration;
         setCurTimerDuration(duration);
         setTimeStamp(duration);
